--- a/public/package.json
+++ b/public/package.json
@@ -10,6 +10,7 @@
   },
   "private": true,
   "dependencies": {
+    "@angular-eslint/schematics": "^16.0.3",
     "@angular/animations": "^16.1.4",
     "@angular/cdk": "^16.1.4",
     "@angular/common": "^16.1.4",
@@ -20,7 +21,9 @@
     "@angular/platform-browser": "^16.1.4",
     "@angular/platform-browser-dynamic": "^16.1.4",
     "@angular/router": "^16.1.4",
+    "jwt-decode": "^3.1.2",
     "ng-let": "^16.0.2",
+    "ngx-socket-io": "^4.5.1",
     "ngx-toastr": "^17.0.2",
     "rxjs": "~7.8.1",
     "tslib": "^2.6.0",
